# SendtoKindle

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.image.yml  docker-compose.yml  pyproject.toml
.github/workflows/: publish-image.yml
config/: users.example.yaml
docs/: unraid.md
send_to_kindle/: __init__.py  config.py  db.py  dependencies.py  filenames.py  logging.py  main.py  repository.py  worker.py
send_to_kindle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
send_to_kindle/api/: __init__.py  app.py
send_to_kindle/services/: __init__.py  emailer.py  epub.py  extractor.py  fetcher.py
send_to_kindle/tests/: test_auth_api.py  test_config.py  test_epub.py  test_epub_formatting.py  test_extractor.py  test_fetcher.py  test_filenames.py  test_job_store.py  test_worker.py
